feat: Adjust HTML asset paths and embed CSS files for Go web server

--- a/sovereign-orchestrator/web/arsenal_index.html
+++ b/sovereign-orchestrator/web/arsenal_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GEMINI // ARSENAL</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/arsenal_war.css') }}">
+    <link rel="stylesheet" href="/web/arsenal_war.css">
     <style>
         /* Portal Styles (Standardized) */
 
@@ -84,6 +84,6 @@ ${data.result.stdout}
     updateStatus();
     setInterval(updateStatus, 5000);
     </script>
-<script src="http://localhost:5000/static/portal_ritual.js?v=999" defer></script>
+<script src="/web/portal_ritual.js" defer></script>
 </body>
 </html>
