--- a/sovereign-orchestrator/web/mind_forensics.html
+++ b/sovereign-orchestrator/web/mind_forensics.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GEMINI // CORTEX // FORENSICS</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/cortex_mind.css') }}">
+    <link rel="stylesheet" href="/web/cortex_mind.css">
     <style>
         /* Portal Styles (Standardized) */
 
@@ -28,6 +28,6 @@
     <div style="position: fixed; bottom: 10px; right: 20px; font-size: 0.6rem; color: var(--border-dim);">
         PORT: 4001 // MODULE: MIND_TRACE
     </div>
-<script src="http://localhost:5000/static/portal_ritual.js?v=999" defer></script>
+<script src="/web/portal_ritual.js" defer></script>
 </body>
 </html>
