--- a/sovereign-orchestrator/web/mind_god_mode.html
+++ b/sovereign-orchestrator/web/mind_god_mode.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virt-I // THE ROOT SANCTUM</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='root_sanctum.css') }}?v=1.1">
+    <link rel="stylesheet" href="/web/root_sanctum.css">
     <style>
         /* --- God Mode Specific Styles --- */
         body { align-items: center; }
@@ -573,6 +573,6 @@
             document.querySelector('.artifact').click();
         };
     </script>
-<script src="http://localhost:5000/static/portal_ritual.js?v=999" defer></script>
+<script src="/web/portal_ritual.js" defer></script>
 </body>
 </html>
