--- a/sovereign-orchestrator/web/mind_llm.html
+++ b/sovereign-orchestrator/web/mind_llm.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virt-I: The Tribal Node</title>
             <title>Virt-I: The Tribal Node</title>
-            <link rel="stylesheet" href="{{ url_for('static', filename='root_sanctum.css') }}?v=1.1">
+            <link rel="stylesheet" href="/web/root_sanctum.css">
                 <style>
                     /* Layout-Specific Styles for LLM Interface */
                     body { align-items: stretch; }
@@ -536,6 +536,6 @@
     }
 </script>
 
-<script src="http://localhost:5000/static/portal_ritual.js?v=999" defer></script>
+<script src="/web/portal_ritual.js" defer></script>
 </body>
 </html>
