--- a/sovereign-orchestrator/web/mind_sentinel.html
+++ b/sovereign-orchestrator/web/mind_sentinel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virt-I // THE SENTINEL</title>
-    <link rel="stylesheet" href="/static/root_sanctum.css?v=1.1">
+    <link rel="stylesheet" href="/web/root_sanctum.css">
     <style>
         body {
             background-color: #050505;
@@ -281,6 +281,6 @@ This may take up to 2 minutes.
         loadTribe();
         setInterval(loadTribe, 30000); // Refresh every 30s
     </script>
-<script src="http://localhost:5000/static/portal_ritual.js?v=999" defer></script>
+<script src="/web/portal_ritual.js" defer></script>
 </body>
 </html>
