--- a/sovereign-orchestrator/web/mind_unified_dashboard.html
+++ b/sovereign-orchestrator/web/mind_unified_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GEMINI // NEXUS_HUB</title>
-    <link rel="stylesheet" href="/static/root_sanctum.css?v=1.1">
+    <link rel="stylesheet" href="/web/root_sanctum.css">
     <style>
         :root {
             --bg: #020202;
@@ -253,6 +253,6 @@
         setInterval(updateHub, 3000);
         updateHub();
     </script>
-<script src="http://localhost:5000/static/portal_ritual.js?v=999" defer></script>
+<script src="/web/portal_ritual.js" defer></script>
 </body>
 </html>
