--- a/sovereign-orchestrator/web/nexus_index.html
+++ b/sovereign-orchestrator/web/nexus_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GEMINI // NEXUS</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/nexus_throne.css') }}">
+    <link rel="stylesheet" href="/web/nexus_throne.css">
     <style>
         /* Portal Styles (Standardized) */
     </style>
@@ -130,6 +130,6 @@
         document.getElementById('soul-output').innerHTML += `<div style="color: var(--oracle-cyan);">Soul Link Established. I am listening.</div>`;
     }, 1000);
     </script>
-<script src="http://localhost:5000/static/portal_ritual.js?v=999" defer></script>
+<script src="/web/portal_ritual.js" defer></script>
 </body>
 </html>
