--- a/sovereign-orchestrator/web/mind_anomaly.html
+++ b/sovereign-orchestrator/web/mind_anomaly.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virt-I: Anomaly Detection</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='root_sanctum.css') }}?v=1.1">
+    <link rel="stylesheet" href="/web/root_sanctum.css">
     <style>
         body {
             background-color: #050505;
@@ -151,7 +151,7 @@
                 const data = await res.json();
                 if (data.path) {
                     const img = document.createElement('img');
-                    img.src = "/static/" + data.path.split('static/')[1]; // Fix path for Flask
+                    img.src = "/web/static/" + data.path.split('static/')[1]; // Fix path for Flask
                     out.prepend(img);
                 } else {
                     out.innerHTML = `<p>Capture Failed</p>`;
@@ -266,6 +266,6 @@
             }
         }
     </script>
-<script src="http://localhost:5000/static/portal_ritual.js?v=999" defer></script>
+<script src="/web/portal_ritual.js" defer></script>
 </body>
 </html>
