--- a/sovereign-orchestrator/web/mind_codex.html
+++ b/sovereign-orchestrator/web/mind_codex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virt-I // THE ULTIMATE CODEX</title>
-    <link rel="stylesheet" href="/static/root_sanctum.css?v=1.1">
+    <link rel="stylesheet" href="/web/root_sanctum.css">
     <style>
         :root {
             --glow-cyan: rgba(0, 243, 255, 0.5);
@@ -589,6 +589,6 @@
             activate('intro'); // Make sure 'intro' is active on load
         };
     </script>
-<script src="http://localhost:5000/static/portal_ritual.js?v=999" defer></script>
+<script src="/web/portal_ritual.js" defer></script>
 </body>
 </html>
